--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -241,7 +241,7 @@ button {
 
 @media (min-width: 700px) {
   #navbar {
-    justify-content: right; }
+    justify-content: flex-end; }
     #navbar #logo {
       position: absolute;
       left: 0;
